[gd_scene load_steps=5 format=2]

[ext_resource path="res://inicio.gd" type="Script" id=1]
[ext_resource path="res://otros/fonts/28 Days Later.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="inicio" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -130.0
margin_right = 328.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 1 )
text = "nombre juego
 "
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 100.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 130.0

[node name="BotonPlay" type="Button" parent="."]
margin_left = 370.0
margin_top = 420.0
margin_right = 710.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 2 )
text = "Jugar"

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="BotonPlay" to="." method="_on_BotonPlay_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
